[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = [ "CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "KeyboardEvent", "Window" ]}

[lib]
crate-type=['cdylib']
